# python-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: constants.py
src/images/: __init__.py  imageexif.py  imageopencv.py
src/qt/: __init__.py  app.py  example.py
src/system/: __init__.py  eventdevice.py  files.py  shell.py  ssh.py
src/utils/: __init__.py  arduino.py  autogui.py  driver.py
src/yt_music/: __init__.py  yt_music.py  yt_music.yaml
tests/: conftest.py
tests/resources/: image_5.tiff
tests/utils/: __init__.py  files_test.py  imageexif_test.py  shell_test.py
